test/files/delete-non-ptr-error.kan
type Person struct {
    name: string
}

def main(): void {
    let p = Person { name: "test" };
    delete p.name; // ok (at least for tychk)

    delete new Person { name: "other" }; // ok aswell
    delete p; // error
}
